fix spacing in in app header

--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -83,7 +83,7 @@
       .user-img {
         height: 55px;
         width: 55px;
-        margin-left: rem(25px);
+        margin-left: rem(60px);
       }
 
     }
